@@ -60,3 +60,12 @@ function retval = loglogerr (varargin)
   end_unwind_protect
 
 endfunction
+
+%!demo
+%! x = exp (log(0.01):0.2:log(10));
+%! y = wblpdf (x, 3, 2);
+%! eyu = 2*rand (size (y)) .* y;
+%! eyl = 0.5*rand (size (y)) .* y;
+%! loglogerr (x, y, eyl, eyu, "#~x-")
+%! xlim (x([1, end]))
+
