@@ -60,3 +60,10 @@ function retval = semilogxerr (varargin)
   end_unwind_protect
 
 endfunction
+
+%!demo
+%! x = exp (log(0.01):0.2:log(10));
+%! y = wblpdf (x, 2, 2);
+%! ey = 0.5*rand (size (y)) .* y;
+%! semilogxerr (x, y, ey, "#~x-")
+%! xlim (x([1, end]))
